--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -1,17 +1,48 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header class="ion-no-border" [translucent]="true">
+  <ion-toolbar >
     <ion-title>
-      Tab 1
+      News
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid fixed>
+    <ion-row>
+      
+      <ion-col size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12" 
+          *ngFor="let new of news; let i = index">
+        <ion-card>
+          
+          <ion-card-header>
+            <ion-card-subtitle>
+
+              <span class="text-primary">
+                {{ i + 1 }}. 
+              </span>
+              <span class="new-source-name">
+                {{ new.source.name }} 
+              </span> 
+              
+            </ion-card-subtitle>
+            <ion-card-title> 
+              {{ new.title }} 
+            </ion-card-title>
+          </ion-card-header>
+
+          <ion-img *ngIf="new.urlToImage" [src]="new.urlToImage"></ion-img>
+
+        </ion-card>
+
+        <ion-card-content>
+          <p>
+            {{ new.description }}
+          </p>
+        </ion-card-content>
+      </ion-col>
+
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
