--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,17 +1,27 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Encabezados
     </ion-title>
   </ion-toolbar>
+
+  <ion-segment scrollable mode="md" 
+               color="primary" [value]="categories[0]" 
+              (ionChange)="categoryChanged($event)">
+    
+    <ion-segment-button mode="md"
+                        *ngFor="let category of categories"
+                        [value]="category">
+      <ion-label class="ion-text-capitalize">{{ category }}</ion-label>
+    </ion-segment-button>
+
+  </ion-segment>
+
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <app-news [news]="news"></app-news>
+
+  
 </ion-content>
