--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,4 +1,4 @@
-<ion-header translucent="true" class="ion-no-border">
+<ion-header  class="ion-no-border">
   <ion-toolbar>
     <ion-title>
       Encabezados
@@ -19,7 +19,7 @@
 
 </ion-header>
 
-<ion-content fullscreen="true">
+<ion-content>
 
   <app-news [news]="news"></app-news>
 
